syntax = "proto3";
package resist.posts.v1;

option go_package = "resist/x/posts/types";

// SocialPost defines the SocialPost message.
message SocialPost {
  string index = 1;
  string title = 2;
  string content = 3;
  string media_url = 4;
  string media_type = 5;
  uint64 group_id = 6;
  string author = 7;
  uint64 upvotes = 8;
  uint64 downvotes = 9;
  uint64 created_at = 10;
  string creator = 11;
  string sources = 12; // JSON array of source IDs
  string intent = 13; // "educate", "discuss", "share", "question"
  string context_type = 14; // "fact-based", "opinion", "personal-experience", "analysis"
  bool requires_moderation = 15; // Flag for community review
}
